[package]
name = "Warp_demo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#tokio = { version = "1", features = ["full"] } # 协程库
warp = "0.3" # warp库
log = "0.4" # 日志库
pretty_env_logger = "0.4" # 日志库
serde = "1.0.152"
serde_json = "1" # json库

ipconfig = "0.3.1" # 用于获取IP地址
sysinfo = "0.27.4" # 用于监测电脑

chatgpt_rs = "0.6.0" # ChatGPT
sha256 = "1.1.2" # SHA256

reqwest = { version = "0.11", features = ["json"]}

pyo3 = { version = "0.18", features = ["extension-module"] }
pyo3-asyncio = { version = "0.18", features = ["attributes", "tokio-runtime"] }
tokio = "1.9"


